dist/argocd/IngressRoute.argocd-server.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argo.cmdcentral.xyz`)
      priority: 10
      services:
        - kind: Service
          name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argo.cmdcentral.xyz`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - kind: Service
          name: argocd-server
          port: 80
          scheme: h2c
  tls:
    secretName: argocd-server
